Fixed width of hero title so that it didn't get squished Made contact / work / hero section tops all consistent

--- a/src/assets/stylesheets/components/Splash.css.scss
+++ b/src/assets/stylesheets/components/Splash.css.scss
@@ -31,22 +31,9 @@ canvas.delta-camp-3d.is-loaded {
 }
 
 .header-3d {
-  padding-top: 200px;
   position: relative;
   left: 0;
   top: 0;
   width: 100%;
   height: 100vh;
-
-  @media (max-width: 768px) {
-    padding-top: 100px;
-  }
 }
-
-// .header-3d canvas {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   max-width: 100%;
-//   max-height: 100%;
-// }
