--- a/src/assets/stylesheets/deltacamp.css.scss
+++ b/src/assets/stylesheets/deltacamp.css.scss
@@ -192,7 +192,8 @@ h6 {
 h1 {
   // font-size: 4rem;
   font-size: 7.0vh;
-  margin-bottom: 1.75rem;
+  margin-bottom: 1.75vh;
+  line-height: 1.1em;
 
   // @media (max-width: 800px) {
   //   font-size: 3.5rem;
@@ -300,7 +301,6 @@ p {
 }
 
 .about {
-  margin-top: -20px;
   position: relative;
   height: 100%;
   z-index: 1001;
@@ -369,7 +369,7 @@ p {
   color: white;
   font-family: "acier-bat-solid", Verdana, sans-serif;
   font-size: 7.0vh;
-  margin: 30px 0 50px;
+  margin: 0 0 50px;
 
   @media (max-width: 520px) {
     margin-bottom: 15px;
